# ITEA-Tests

./: .gitignore  CMakeLists.txt
UT/: CMakeLists.txt
UT/AVProcessing_UT/: CMakeLists.txt
UT/AVProcessing_UT/headers/: TestMetadataUtils.h
UT/AVProcessing_UT/src/: TestMetadataProcessor.cpp
include/: Utils.h
include/Lesson1/: Homework.h
include/Lesson2/: Homework.h
include/Lesson3/: Homework.h
src/: Utils.cpp
src/Lesson1/: HomeworkImpl.cpp
src/Lesson2/: HomeworkImpl.cpp
src/Lesson3/: HomeworkImpl.cpp
tests/: CMakeLists.txt
tests/unit_tests/: CMakeLists.txt
tests/unit_tests/headers/: TestMetadataProcessor.h  TestMetadataUtils.h
tests/unit_tests/headers/Lesson1/: TestHomework.h
tests/unit_tests/headers/Lesson2/: TestHomework.h
tests/unit_tests/headers/Lesson3/: TestHomework.h
tests/unit_tests/src/: TestMetadataUtils.cpp
tests/unit_tests/src/Lesson1/: TestHomework.cpp
tests/unit_tests/src/Lesson2/: TestHomework.cpp
tests/unit_tests/src/Lesson3/: TestHomework.cpp
