CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

PROJECT(AVProcessing_UT_root)

set (AVPROCESSING_UT_ROOT_DIRECTORY ${PROJECT_SOURCE_DIR})

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake_modules)

include(AddGMock)
add_gmock()

set (AVPROCESSING_UT_OUTPUT_DIRECTORY_NAME bin)
set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${AVPROCESSING_UT_ROOT_DIRECTORY}/${AVPROCESSING_UT_OUTPUT_DIRECTORY_NAME})
set (CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${AVPROCESSING_UT_ROOT_DIRECTORY}/${AVPROCESSING_UT_OUTPUT_DIRECTORY_NAME})
set (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${AVPROCESSING_UT_ROOT_DIRECTORY}/${AVPROCESSING_UT_OUTPUT_DIRECTORY_NAME})

set (AVPROCESSING_UT_DIRECTORY ${AVPROCESSING_UT_ROOT_DIRECTORY}/AVProcessing_UT)

add_subdirectory(AVProcessing_UT AVPROCESSING_UT_DIRECTORY)
